--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,44 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: GitHub Page
+title: ECE IP Übungen
 description: >- # this means to ignore newlines until "baseurl:"
-  My personal GitHub Page
+  Aufgaben und Lösungsbeispiele für IP1 und IP2 and der FH JOANNEUM.
 baseurl: '/ece-ip-uebungen' # the subpath of your site, e.g. /blog
-url: 'http://lufixsch.github.io' # the base hostname & protocol for your site, e.g. http://example.com
+url: '' # the base hostname & protocol for your site, e.g. http://example.com
+
+aux_links:
+  'Lösungsvorschläge':
+    - 'https://github.com/lufixSch/ece-ip-uebungen'
+
+    # Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: true
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: 'Edit this page on GitHub'
+gh_edit_repository: 'https://github.com/lufixSch/ece-ip-uebungen' # the github URL for your repo
+gh_edit_branch: 'gh-pages' # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: 'tree' # "tree" or "edit" if you want the user to jump into the editor immediately
 
 # Build settings
 theme: just-the-docs
+
+markdown: kramdown
+kramdown:
+  syntax_highlighter_opts:
+    block:
+      line_numbers: false
+
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  startings: []
+  blanklines: false
+  profile: false
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -46,4 +76,5 @@ theme: just-the-docs
 #   - vendor/gems/
 #   - vendor/ruby/
 
-color_scheme: light
+color_scheme: lufix-dark
+permalink: pretty
